Add mode parameter to write_single_raw_table for cleaner code
IMPROVEMENTS:
- Add optional 'mode' parameter to write_single_raw_table function
- Defaults to None, falls back to WRITE_RAW_MODE from config if not specified
- Update DataProcessor.write_single_raw_table to accept and pass mode parameter
- Update write_uc_batch callback to pass mode='append' explicitly

BENEFITS:
- Cleaner than global variable manipulation
- No scope/threading concerns with try/finally blocks
- Explicit parameter passing is more maintainable and readable
- UC tables always use append mode (prevents data loss during 100-catalog batches)
- Other writes still use WRITE_RAW_MODE from config

REMOVED:
- Global WRITE_RAW_MODE override with try/finally in callback
- Replaced with explicit mode parameter passing

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -318,10 +318,18 @@
     "    schema: str,\n",
     "    workspace_url: str,\n",
     "    start_ts: str,\n",
-    "    spark\n",
+    "    spark,\n",
+    "    mode: str = None\n",
     "):\n",
-    "    \"\"\"Write a single raw data table to Unity Catalog with robust schema handling.\"\"\"\n",
+    "    \"\"\"Write a single raw data table to Unity Catalog with robust schema handling.\n",
+    "    \n",
+    "    Args:\n",
+    "        mode: Write mode ('append' or 'overwrite'). If None, uses WRITE_RAW_MODE from config.\n",
+    "    \"\"\"\n",
     "    tbl = f\"`{catalog}`.`{schema}`.`raw_{key}`\"\n",
+    "    \n",
+    "    # Use explicit mode if provided, otherwise use global config\n",
+    "    write_mode = mode if mode is not None else WRITE_RAW_MODE\n",
     "    \n",
     "    # Check for empty datasets\n",
     "    if not records:\n",
@@ -335,7 +343,7 @@
     "                       .withColumn(\"_collected_at\", F.lit(start_ts))\n",
     "                       .withColumn(\"_workspace\", F.lit(workspace_url)))\n",
     "            try:\n",
-    "                empty_df.write.mode(WRITE_RAW_MODE).saveAsTable(tbl)\n",
+    "                empty_df.write.mode(write_mode).saveAsTable(tbl)\n",
     "                print(f\"[WRITE] raw_{key} → {tbl} (empty table created)\")\n",
     "                return\n",
     "            except Exception as e:\n",
@@ -349,7 +357,7 @@
     "               .withColumn(\"_workspace\", F.lit(workspace_url)))\n",
     "        \n",
     "        # Configure write options based on schema handling settings\n",
-    "        writer = sdf.write.mode(WRITE_RAW_MODE)\n",
+    "        writer = sdf.write.mode(write_mode)\n",
     "        \n",
     "        # Add Delta Lake schema evolution options\n",
     "        if ENABLE_MERGE_SCHEMA:\n",
@@ -380,7 +388,7 @@
     "                if FALLBACK_TO_OVERWRITE and not ENABLE_OVERWRITE_SCHEMA:\n",
     "                    try:\n",
     "                        print(f\"[RETRY] raw_{key} → Attempting with overwriteSchema=true\")\n",
-    "                        fallback_writer = sdf.write.mode(WRITE_RAW_MODE).option(\"overwriteSchema\", \"true\")\n",
+    "                        fallback_writer = sdf.write.mode(write_mode).option(\"overwriteSchema\", \"true\")\n",
     "                        fallback_writer.saveAsTable(tbl)\n",
     "                        print(f\"[WRITE] raw_{key} → {tbl} ({len(records)} rows) [schema overwritten]\")\n",
     "                        return\n",
@@ -389,7 +397,7 @@
     "                            print(f\"[SCHEMA-FAIL] raw_{key}: Overwrite schema also failed: {str(e2)[:200]}...\")\n",
     "                \n",
     "                # If schema operations fail and we're in overwrite mode, try dropping the table first\n",
-    "                if WRITE_RAW_MODE == \"overwrite\":\n",
+    "                if write_mode == \"overwrite\":\n",
     "                    try:\n",
     "                        print(f\"[RETRY] raw_{key} → Attempting to drop and recreate table\")\n",
     "                        spark.sql(f\"DROP TABLE IF EXISTS {tbl}\")\n",
@@ -608,14 +616,18 @@
     "        self.catalog = catalog\n",
     "        self.schema = schema\n",
     "    \n",
-    "    def write_single_raw_table(self, key: str, records: List[Dict[str, Any]]):\n",
-    "        \"\"\"Write a single raw table immediately.\"\"\"\n",
+    "    def write_single_raw_table(self, key: str, records: List[Dict[str, Any]], mode: str = None):\n",
+    "        \"\"\"Write a single raw table immediately.\n",
+    "        \n",
+    "        Args:\n",
+    "            mode: Write mode ('append' or 'overwrite'). If None, uses WRITE_RAW_MODE from config.\n",
+    "        \"\"\"\n",
     "        if not self.catalog or not self.schema:\n",
     "            raise ValueError(\"Catalog and schema must be set for streaming writes\")\n",
     "        \n",
     "        write_single_raw_table(\n",
     "            key, records, self.catalog, self.schema, \n",
-    "            self.workspace_url, self.start_ts, self.spark\n",
+    "            self.workspace_url, self.start_ts, self.spark, mode\n",
     "        )\n",
     "    \n",
     "    def process_and_write_all(\n",
