--- a/main.ipynb
+++ b/main.ipynb
@@ -256,9 +256,10 @@
     "        \n",
     "        # Define write callback for per-catalog memory management (streaming mode only)\n",
     "        def write_uc_batch(table_type, records):\n",
-    "            \"\"\"Write UC records immediately to free memory.\"\"\"\n",
+    "            \"\"\"Write UC records immediately with forced append mode.\"\"\"\n",
     "            if records:\n",
-    "                data_processor.write_single_raw_table(table_type, records)\n",
+    "                # Pass explicit append mode (cleaner than global override)\n",
+    "                data_processor.write_single_raw_table(table_type, records, mode=\"append\")\n",
     "        \n",
     "        # Only use callback in streaming mode (enables per-catalog memory cleanup)\n",
     "        write_callback = write_uc_batch if ENABLE_STREAMING_WRITES else None\n",
