--- a/config.ipynb
+++ b/config.ipynb
@@ -61,11 +61,11 @@
     "# TARGET CONFIGURATION\n",
     "# ====================================================================================\n",
     "# ---- Where to write results ----\n",
-    "TARGET_CATALOG = \"users\"            # <- set your catalog\n",
-    "TARGET_SCHEMA  = \"robert_altmiller\" # <- set your schema (created if missing)\n",
-    "WRITE_RAW_MODE = \"append\"           # \"append\" or \"overwrite\"\n",
-    "WRITE_SUMMARY_MODE = \"overwrite\"    # \"append\" or \"overwrite\"\n",
-    "DELETE_EXISTING_DATA = True         # Delete all existing workspace assessment data"
+    "TARGET_CATALOG = \"main\"              # <- set your catalog\n",
+    "TARGET_SCHEMA  = \"robert_altmiller2\" # <- set your schema (created if missing)\n",
+    "WRITE_RAW_MODE = \"overwrite\"         # \"append\" or \"overwrite\"\n",
+    "WRITE_SUMMARY_MODE = \"overwrite\"     # \"append\" or \"overwrite\"\n",
+    "DELETE_EXISTING_DATA = True          # Delete all existing workspace assessment data"
    ]
   },
   {
@@ -90,7 +90,7 @@
     "# HTTP & CONCURRENCY CONFIGURATION\n",
     "# ====================================================================================\n",
     "# ---- Async / concurrency ----\n",
-    "MAX_CONCURRENCY = 2               # aiohttp concurrent in-flight requests (reduced to avoid throttling)\n",
+    "MAX_CONCURRENCY = 3               # aiohttp concurrent in-flight requests (reduced to avoid throttling)\n",
     "HTTP_TIMEOUT_SEC = 60\n",
     "RETRY_DELAY_BASE = 2\n",
     "RETRY_ATTEMPTS = 3\n",
