--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -41,10 +41,10 @@
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "\n",
     "# Spark keep-alive configuration\n",
-    "SPARK_KEEPALIVE_INTERVAL = 600  # seconds\n",
+    "SPARK_KEEPALIVE_INTERVAL = 600  # Seconds (10 minutes)\n",
     "\n",
     "# Catalog processing configuration\n",
-    "CATALOG_BATCH_SIZE = 20           # Process 20 catalogs in parallel (API calls)\n",
+    "CATALOG_BATCH_SIZE = 50           # Process n > 0 catalogs in parallel (API calls)\n",
     "CATALOG_WRITE_BATCH = 100         # Accumulate 100 catalogs before writing (Delta writes)"
    ]
   },
