--- a/config.ipynb
+++ b/config.ipynb
@@ -251,7 +251,7 @@
     "]\n",
     "\n",
     "# Global pagination controls (can be overridden per endpoint)\n",
-    "ENABLE_PAGINATION_BY_DEFAULT = False\n",
+    "ENABLE_PAGINATION_BY_DEFAULT = True\n",
     "\n",
     "# Per-endpoint pagination overrides\n",
     "# Set to True/False to enable/disable pagination for specific endpoints\n",
