updated the parameters in the unity_catalog.ipynb.

--- a/config.ipynb
+++ b/config.ipynb
@@ -62,7 +62,7 @@
     "# ====================================================================================\n",
     "# ---- Where to write results ----\n",
     "TARGET_CATALOG = \"main\"              # <- set your catalog\n",
-    "TARGET_SCHEMA  = \"robert_altmiller2\" # <- set your schema (created if missing)\n",
+    "TARGET_SCHEMA  = \"robert_altmiller3\" # <- set your schema (created if missing)\n",
     "WRITE_RAW_MODE = \"overwrite\"         # \"append\" or \"overwrite\"\n",
     "WRITE_SUMMARY_MODE = \"overwrite\"     # \"append\" or \"overwrite\"\n",
     "DELETE_EXISTING_DATA = True          # Delete all existing workspace assessment data"
@@ -148,7 +148,7 @@
     "# DATA PROCESSING CONFIGURATION\n",
     "# ====================================================================================\n",
     "# Enable streaming writes - write raw data immediately after each API call\n",
-    "ENABLE_STREAMING_WRITES = True  # True = immediate writes, False = batch writes at end"
+    "ENABLE_STREAMING_WRITES = False  # True = immediate writes, False = batch writes at end"
    ]
   },
   {
