--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -41,11 +41,11 @@
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "\n",
     "# Spark keep-alive configuration\n",
-    "SPARK_KEEPALIVE_INTERVAL = 600  # Seconds (10 minutes)\n",
+    "SPARK_KEEPALIVE_INTERVAL = 600  # Seconds (10 minutes) - DON'T MODIFY\n",
     "\n",
     "# Catalog processing configuration\n",
-    "CATALOG_BATCH_SIZE = 50           # Process n > 0 catalogs in parallel (API calls)\n",
-    "CATALOG_WRITE_BATCH = 100         # Accumulate 100 catalogs before writing (Delta writes)"
+    "CATALOG_BATCH_SIZE = 50           # Process n > 0 catalogs in parallel (API calls) - DON'T MODIFY\n",
+    "CATALOG_WRITE_BATCH = 100         # Accumulate 100 catalogs before writing (Delta writes) - DON'T MODIFY"
    ]
   },
   {
