--- a/config.ipynb
+++ b/config.ipynb
@@ -148,6 +148,10 @@
     "# DATA PROCESSING CONFIGURATION\n",
     "# ====================================================================================\n",
     "# Enable streaming writes - write raw data immediately after each API call\n",
+    "# True = Memory-efficient, works on serverless, slower (many small writes)\n",
+    "# False = Batch mode - faster writes, requires more memory (~2-5GB for large workspaces)\n",
+    "# Only use False for: small workspaces (<50 catalogs, <50K tables) on provisioned clusters with 16GB+ RAM\n",
+    "\n",
     "ENABLE_STREAMING_WRITES = False  # True = immediate writes, False = batch writes at end"
    ]
   },
