--- a/config.ipynb
+++ b/config.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "# ---- Pagination defaults ----\n",
     "PAGE_SIZE_DEFAULT = 100\n",
-    "GLOBAL_MAX_PAGES = 0               # 0 = respect per-endpoint max_pages; N = override all endpoints"
+    "GLOBAL_MAX_PAGES = 5               # 0 = respect per-endpoint max_pages; N > 0 overrides all endpoints"
    ]
   },
   {
