--- a/config.ipynb
+++ b/config.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "79af4edc-9c3f-4e1e-a4b9-c24f29abfcaf",
      "showTitle": false,
@@ -62,7 +65,7 @@
     "# ====================================================================================\n",
     "# ---- Where to write results ----\n",
     "TARGET_CATALOG = \"main\"              # <- set your catalog\n",
-    "TARGET_SCHEMA  = \"robert_altmiller3\" # <- set your schema (created if missing)\n",
+    "TARGET_SCHEMA  = \"robert_altmiller4\" # <- set your schema (created if missing)\n",
     "WRITE_RAW_MODE = \"overwrite\"         # \"append\" or \"overwrite\"\n",
     "WRITE_SUMMARY_MODE = \"overwrite\"     # \"append\" or \"overwrite\"\n",
     "DELETE_EXISTING_DATA = True          # Delete all existing workspace assessment data"
@@ -97,7 +100,7 @@
     "\n",
     "# ---- Pagination defaults ----\n",
     "PAGE_SIZE_DEFAULT = 100\n",
-    "GLOBAL_MAX_PAGES = 5               # 0 = respect per-endpoint max_pages; N > 0 overrides all endpoints"
+    "GLOBAL_MAX_PAGES = 0               # 0 = respect per-endpoint max_pages; N > 0 overrides all endpoints"
    ]
   },
   {
@@ -152,7 +155,7 @@
     "# False = Batch mode - faster writes, requires more memory (~2-5GB for large workspaces)\n",
     "# Only use False for: small workspaces (<50 catalogs, <50K tables) on provisioned clusters with 16GB+ RAM\n",
     "\n",
-    "ENABLE_STREAMING_WRITES = False  # True = immediate writes, False = batch writes at end"
+    "ENABLE_STREAMING_WRITES = True  # True = immediate writes, False = batch writes at end"
    ]
   },
   {
