Add pagination support to Unity Catalog API calls
PROBLEM:
- get_schemas_for_catalog only fetched first page of schemas (typically 100-500 max)
- list_tables_for_schema_with_data only fetched first page of tables per schema
- Missing schemas like 'assortment' were on page 2+ and never enumerated
- User could browse schemas manually but scan was incomplete

FIX:
- Add pagination loops to get_schemas_for_catalog method
- Add pagination loops to list_tables_for_schema_with_data method
- Use max_results=500 and page_token parameters
- Loop until next_page_token is null
- Add [UC-PAGINATION] logging when multiple pages detected

BENEFITS:
- Now scans ALL schemas in a catalog (not just first 100-500)
- Now scans ALL tables in a schema (not just first page)
- Verbose logging shows pagination progress
- Complete inventory for large workspaces with 100+ schemas or 500+ tables per schema

--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -136,21 +136,49 @@
     "        return 0, 0, 0\n",
     "    \n",
     "    def list_tables_for_schema_with_data(self, catalog: str, schema: str) -> List[Dict[str, any]]:\n",
-    "        \"\"\"Return list of table metadata for catalog.schema\"\"\"\n",
+    "        \"\"\"Return list of table metadata for catalog.schema with pagination support\"\"\"\n",
     "        try:\n",
-    "            r = requests.get(\n",
-    "                f\"{self.base_url}/api/2.1/unity-catalog/tables\",\n",
-    "                headers=self.headers,\n",
-    "                params={\"catalog_name\": catalog, \"schema_name\": schema},\n",
-    "                timeout=HTTP_TIMEOUT_SEC\n",
-    "            )\n",
-    "            if r.status_code == 200:\n",
-    "                tables = r.json().get(\"tables\", [])\n",
-    "                # Add catalog and schema context to each table\n",
-    "                for tbl in tables:\n",
-    "                    tbl[\"_catalog\"] = catalog\n",
-    "                    tbl[\"_schema\"] = schema\n",
-    "                return tables\n",
+    "            all_tables = []\n",
+    "            next_page_token = None\n",
+    "            page_count = 0\n",
+    "            \n",
+    "            while True:\n",
+    "                params = {\"catalog_name\": catalog, \"schema_name\": schema, \"max_results\": 500}\n",
+    "                if next_page_token:\n",
+    "                    params[\"page_token\"] = next_page_token\n",
+    "                    \n",
+    "                r = requests.get(\n",
+    "                    f\"{self.base_url}/api/2.1/unity-catalog/tables\",\n",
+    "                    headers=self.headers,\n",
+    "                    params=params,\n",
+    "                    timeout=HTTP_TIMEOUT_SEC\n",
+    "                )\n",
+    "                \n",
+    "                if r.status_code == 200:\n",
+    "                    data = r.json()\n",
+    "                    tables = data.get(\"tables\", [])\n",
+    "                    page_count += 1\n",
+    "                    \n",
+    "                    # Add catalog and schema context to each table\n",
+    "                    for tbl in tables:\n",
+    "                        tbl[\"_catalog\"] = catalog\n",
+    "                        tbl[\"_schema\"] = schema\n",
+    "                    \n",
+    "                    all_tables.extend(tables)\n",
+    "                    \n",
+    "                    # Check for next page\n",
+    "                    next_page_token = data.get(\"next_page_token\")\n",
+    "                    if not next_page_token:\n",
+    "                        break  # No more pages\n",
+    "                    \n",
+    "                    log(f\"[UC-PAGINATION] {catalog}.{schema}: page {page_count} fetched {len(tables)} tables, continuing...\")\n",
+    "                else:\n",
+    "                    log(f\"[UC-SKIP] {catalog}.{schema}: HTTP {r.status_code}\")\n",
+    "                    break\n",
+    "                    \n",
+    "            if page_count > 1:\n",
+    "                log(f\"[UC-PAGINATION] {catalog}.{schema}: completed {page_count} pages, total {len(all_tables)} tables\")\n",
+    "            return all_tables\n",
     "        except Exception as e:\n",
     "            log(f\"[UC-ERROR] {catalog}.{schema}: {e}\")\n",
     "        return []\n",
@@ -184,25 +212,49 @@
     "            return []\n",
     "    \n",
     "    def get_schemas_for_catalog(self, catalog: str, schema_limit: int = 0) -> List[str]:\n",
-    "        \"\"\"Get list of schemas for a catalog.\"\"\"\n",
+    "        \"\"\"Get list of schemas for a catalog with pagination support.\"\"\"\n",
     "        try:\n",
-    "            rs = requests.get(\n",
-    "                f\"{self.base_url}/api/2.1/unity-catalog/schemas\",\n",
-    "                headers=self.headers,\n",
-    "                params={\"catalog_name\": catalog},\n",
-    "                timeout=HTTP_TIMEOUT_SEC\n",
-    "            )\n",
-    "            if rs.status_code != 200:\n",
-    "                log(f\"[UC] Skip catalog {catalog} (status={rs.status_code})\")\n",
-    "                return []\n",
+    "            all_schemas = []\n",
+    "            next_page_token = None\n",
+    "            page_count = 0\n",
     "            \n",
-    "            schemas = [s[\"name\"] for s in rs.json().get(\"schemas\", [])]\n",
-    "            schemas = sorted(schemas)\n",
+    "            while True:\n",
+    "                params = {\"catalog_name\": catalog, \"max_results\": 500}\n",
+    "                if next_page_token:\n",
+    "                    params[\"page_token\"] = next_page_token\n",
+    "                    \n",
+    "                rs = requests.get(\n",
+    "                    f\"{self.base_url}/api/2.1/unity-catalog/schemas\",\n",
+    "                    headers=self.headers,\n",
+    "                    params=params,\n",
+    "                    timeout=HTTP_TIMEOUT_SEC\n",
+    "                )\n",
+    "                \n",
+    "                if rs.status_code != 200:\n",
+    "                    log(f\"[UC] Skip catalog {catalog} (status={rs.status_code})\")\n",
+    "                    return []\n",
+    "                \n",
+    "                data = rs.json()\n",
+    "                schemas = [s[\"name\"] for s in data.get(\"schemas\", [])]\n",
+    "                page_count += 1\n",
+    "                all_schemas.extend(schemas)\n",
+    "                \n",
+    "                # Check for next page\n",
+    "                next_page_token = data.get(\"next_page_token\")\n",
+    "                if not next_page_token:\n",
+    "                    break  # No more pages\n",
+    "                \n",
+    "                log(f\"[UC-PAGINATION] {catalog}: page {page_count} fetched {len(schemas)} schemas, continuing...\")\n",
+    "            \n",
+    "            if page_count > 1:\n",
+    "                log(f\"[UC-PAGINATION] {catalog}: completed {page_count} pages, total {len(all_schemas)} schemas\")\n",
+    "            \n",
+    "            all_schemas = sorted(all_schemas)\n",
     "            \n",
     "            if schema_limit and schema_limit > 0:\n",
-    "                schemas = schemas[:schema_limit]\n",
+    "                all_schemas = all_schemas[:schema_limit]\n",
     "                \n",
-    "            return schemas\n",
+    "            return all_schemas\n",
     "        except Exception as e:\n",
     "            log(f\"[UC-ERROR] Failed to get schemas for {catalog}: {e}\")\n",
     "            return []\n",
