Move Spark keep-alive to global scope and reduce interval
PROBLEM:
- Spark session was timing out BEFORE UC enumeration even started
- Keep-alive thread started too late (only before UC enumeration)
- Session died during delete operations and REST API collection
- 600-second interval too long for aggressive serverless timeouts
- Resulted in INACTIVITY_TIMEOUT errors and failed writes

SOLUTION:
- Start global keep-alive thread IMMEDIATELY after Spark session creation in main.ipynb
- Reduce interval from 600s (10 min) to 120s (2 min) for serverless compatibility
- Keep session alive during ALL phases: delete, REST API, UC enumeration, writes
- Stop keep-alive thread at end of main() (both success and error paths)
- Remove duplicate keep-alive logic from enumerate_unity_catalog method
- Add proper exception handling to UC enumeration

BENEFITS:
- Spark session stays alive throughout entire assessment (15-30+ minutes)
- Works reliably on serverless compute with aggressive timeouts
- Single global keep-alive thread (simpler, more maintainable)
- Prevents 'session_id is no longer usable' errors
- All 70K+ tables can now be written successfully

--- a/main.ipynb
+++ b/main.ipynb
@@ -169,6 +169,7 @@
     "import os, sys\n",
     "import time\n",
     "import asyncio\n",
+    "import threading\n",
     "import nest_asyncio\n",
     "from datetime import datetime, timezone"
    ]
@@ -209,6 +210,16 @@
     "        token = str(dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get())\n",
     "        \n",
     "        print(f\"[Init] Connected to workspace: {workspace_url}\")\n",
+    "        \n",
+    "        # Start global keep-alive thread immediately to prevent session timeout\n",
+    "        stop_keep_alive = threading.Event()\n",
+    "        keep_alive_thread = threading.Thread(\n",
+    "            target=keep_spark_alive,\n",
+    "            args=(spark, stop_keep_alive, 120),  # 120 seconds for serverless\n",
+    "            daemon=True\n",
+    "        )\n",
+    "        keep_alive_thread.start()\n",
+    "        print(f\"[KEEP-ALIVE] ✓ Global keep-alive thread started (120s interval)\")\n",
     "        print(\"=\"*80, \"\\n\")\n",
     "        \n",
     "    except Exception as e:\n",
@@ -325,10 +336,21 @@
     "        print(f\"[STATS] Collected {total_objects} object types with {total_records:,} total records\")\n",
     "        print(f\"[STATS] UC: {uc_counts['uc_catalogs']} catalogs, {uc_counts['uc_schemas']} schemas, {uc_counts['uc_tables']} tables\")\n",
     "        \n",
+    "        # Stop keep-alive thread\n",
+    "        stop_keep_alive.set()\n",
+    "        print(\"[KEEP-ALIVE] ✓ Global keep-alive thread stopped\")\n",
+    "        \n",
     "    except Exception as e:\n",
     "        print(f\"[ERROR] Assessment failed: {e}\")\n",
     "        import traceback\n",
     "        traceback.print_exc()\n",
+    "        \n",
+    "        # Stop keep-alive thread even on error\n",
+    "        try:\n",
+    "            stop_keep_alive.set()\n",
+    "            print(\"[KEEP-ALIVE] ✓ Global keep-alive thread stopped\")\n",
+    "        except:\n",
+    "            pass\n",
     "\n",
     "\n",
     "# Run the main assessment\n",
