--- a/unity_catalog.ipynb
+++ b/unity_catalog.ipynb
@@ -40,12 +40,12 @@
     "from typing import Dict, List, Tuple\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "\n",
-    "# Spark keep-alive configuration\n",
-    "SPARK_KEEPALIVE_INTERVAL = 600  # Seconds (10 minutes) - DON'T MODIFY\n",
+    "# Spark keep-alive configuration (now managed globally in main.ipynb)\n",
+    "SPARK_KEEPALIVE_INTERVAL = 120  # Seconds (2 minutes for serverless) - DON'T MODIFY\n",
     "\n",
     "# Catalog processing configuration\n",
-    "CATALOG_BATCH_SIZE = 50           # Process n > 0 catalogs in parallel (API calls) - DON'T MODIFY\n",
-    "CATALOG_WRITE_BATCH = 100         # Accumulate 100 catalogs before writing (Delta writes) - DON'T MODIFY"
+    "CATALOG_BATCH_SIZE = 2           # Process n > 0 catalogs in parallel (API calls) - DON'T MODIFY\n",
+    "CATALOG_WRITE_BATCH = 20         # Accumulate 100 catalogs before writing (Delta writes) - DON'T MODIFY"
    ]
   },
   {
@@ -298,19 +298,8 @@
     "            print(\"[UC] Skipped (UC_ENABLE=False).\")\n",
     "            return out, raw_data\n",
     "\n",
-    "        # Start keep-alive thread to prevent Spark session timeout\n",
-    "        stop_keep_alive = threading.Event()\n",
-    "        keep_alive_thread = None\n",
+    "        # Note: Spark keep-alive is now managed globally in main.ipynb\n",
     "        \n",
-    "        if spark:\n",
-    "            keep_alive_thread = threading.Thread(\n",
-    "                target=keep_spark_alive,\n",
-    "                args=(spark, stop_keep_alive, SPARK_KEEPALIVE_INTERVAL),\n",
-    "                daemon=True\n",
-    "            )\n",
-    "            keep_alive_thread.start()\n",
-    "            print(f\"[UC] Spark keep-alive thread started ({SPARK_KEEPALIVE_INTERVAL}s interval)\")\n",
-    "\n",
     "        try:\n",
     "            allowlist = allowlist or []\n",
     "            \n",
@@ -428,12 +417,11 @@
     "            print(f\"[UC] Collected {len(raw_data['schemas'])} schema records, {len(raw_data['tables'])} table records\")\n",
     "            return out, raw_data\n",
     "        \n",
-    "        finally:\n",
-    "            # Stop keep-alive thread\n",
-    "            if spark and keep_alive_thread:\n",
-    "                stop_keep_alive.set()\n",
-    "                keep_alive_thread.join(timeout=5)\n",
-    "                print(\"[UC] Spark keep-alive thread stopped\")\n"
+    "        except Exception as e:\n",
+    "            print(f\"[UC-ERROR] Enumeration failed: {e}\")\n",
+    "            import traceback\n",
+    "            traceback.print_exc()\n",
+    "            return out, raw_data\n"
    ]
   },
   {
