Add validation for target catalog and schema existence
PROBLEM:
- Assessment would run and fail late if target catalog/schema don't exist
- No early validation, wasting time and resources
- Cryptic errors during write phase

SOLUTION:
- Add validation block after authentication and before assessment starts
- Check if TARGET_CATALOG exists using SHOW CATALOGS
- Check if TARGET_SCHEMA exists using SHOW SCHEMAS
- Exit gracefully with clear error messages if either is missing
- Stop keep-alive thread on validation failure
- Provide helpful SQL commands to create missing objects
- List available catalogs/schemas for reference

BENEFITS:
- Fail fast - exit within seconds if misconfigured
- Clear error messages with actionable steps
- Prevents wasted time on long-running assessments
- Lists available options to help user fix configuration
- Clean shutdown (stops keep-alive thread)

--- a/main.ipynb
+++ b/main.ipynb
@@ -227,6 +227,33 @@
     "        print(\"Make sure this script is running in a Databricks notebook environment.\")\n",
     "        return\n",
     "    \n",
+    "    # Validate target catalog and schema exist before starting assessment\n",
+    "    print(\"[VALIDATE] Checking target catalog and schema existence...\")\n",
+    "    try:\n",
+    "        # Check if catalog exists\n",
+    "        catalogs = [row.catalog for row in spark.sql(\"SHOW CATALOGS\").collect()]\n",
+    "        if TARGET_CATALOG not in catalogs:\n",
+    "            print(f\"[ERROR] ❌ Target catalog '{TARGET_CATALOG}' does not exist!\")\n",
+    "            print(f\"[ERROR] Available catalogs: {', '.join(catalogs)}\")\n",
+    "            print(f\"[ERROR] Please create the catalog first: CREATE CATALOG `{TARGET_CATALOG}`\")\n",
+    "            stop_keep_alive.set()  # Stop keep-alive thread\n",
+    "            return\n",
+    "        \n",
+    "        # Check if schema exists\n",
+    "        schemas = [row.databaseName for row in spark.sql(f\"SHOW SCHEMAS IN `{TARGET_CATALOG}`\").collect()]\n",
+    "        if TARGET_SCHEMA not in schemas:\n",
+    "            print(f\"[ERROR] ❌ Target schema '{TARGET_SCHEMA}' does not exist in catalog '{TARGET_CATALOG}'!\")\n",
+    "            print(f\"[ERROR] Available schemas: {', '.join(schemas)}\")\n",
+    "            print(f\"[ERROR] Please create the schema first: CREATE SCHEMA `{TARGET_CATALOG}`.`{TARGET_SCHEMA}`\")\n",
+    "            stop_keep_alive.set()  # Stop keep-alive thread\n",
+    "            return\n",
+    "        \n",
+    "        print(f\"[VALIDATE] ✅ Target catalog '{TARGET_CATALOG}' and schema '{TARGET_SCHEMA}' exist\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"[ERROR] ❌ Failed to validate target catalog/schema: {e}\")\n",
+    "        stop_keep_alive.set()  # Stop keep-alive thread\n",
+    "        return\n",
+    "    \n",
     "    print(\"[▶️ RUN] Starting full workspace assessment...\")\n",
     "    print(f\"[CONFIG] Streaming writes: {'ENABLED' if ENABLE_STREAMING_WRITES else 'DISABLED'}\")\n",
     "    \n",
