--- a/config.ipynb
+++ b/config.ipynb
@@ -68,7 +68,7 @@
     "TARGET_SCHEMA  = \"robert_altmiller4\" # <- set your schema (created if missing)\n",
     "WRITE_RAW_MODE = \"overwrite\"         # \"append\" or \"overwrite\"\n",
     "WRITE_SUMMARY_MODE = \"overwrite\"     # \"append\" or \"overwrite\"\n",
-    "DELETE_EXISTING_DATA = True          # Delete all existing workspace assessment data"
+    "DELETE_EXISTING_DATA = False         # Delete all existing workspace assessment data"
    ]
   },
   {
