Centralize SPARK_KEEPALIVE_INTERVAL in config.ipynb
CHANGES:
- Move SPARK_KEEPALIVE_INTERVAL definition from unity_catalog.ipynb to config.ipynb
- Update main.ipynb to use SPARK_KEEPALIVE_INTERVAL from config
- Remove duplicate definition from unity_catalog.ipynb
- Document SPARK_KEEPALIVE_INTERVAL in README.md

BENEFITS:
- Single source of truth for keep-alive interval configuration
- Easier to adjust interval without editing multiple files
- Consistent with other configuration parameters
- Better documentation for users

VALUE:
- 120 seconds (2 minutes) - optimized for serverless compute
- Prevents INACTIVITY_TIMEOUT errors
- Can be adjusted based on compute type (serverless vs provisioned)

--- a/config.ipynb
+++ b/config.ipynb
@@ -213,7 +213,10 @@
     "UC_CATALOG_ALLOWLIST: List[str] = []  # e.g. [\"main\", \"hive_metastore\"]; empty = all\n",
     "UC_CATALOG_LIMIT = 0                  # 0 = all; N = first N catalogs\n",
     "UC_SCHEMA_LIMIT_PER_CATALOG = 0       # 0 = all; N = first N schemas per catalog\n",
-    "UC_MAX_WORKERS = 20"
+    "UC_MAX_WORKERS = 20\n",
+    "\n",
+    "# ---- Spark keep-alive configuration ----\n",
+    "SPARK_KEEPALIVE_INTERVAL = 120        # Seconds (2 minutes for serverless compatibility)"
    ]
   },
   {
