--- a/main.ipynb
+++ b/main.ipynb
@@ -215,11 +215,11 @@
     "        stop_keep_alive = threading.Event()\n",
     "        keep_alive_thread = threading.Thread(\n",
     "            target=keep_spark_alive,\n",
-    "            args=(spark, stop_keep_alive, 120),  # 120 seconds for serverless\n",
+    "            args=(spark, stop_keep_alive, SPARK_KEEPALIVE_INTERVAL),\n",
     "            daemon=True\n",
     "        )\n",
     "        keep_alive_thread.start()\n",
-    "        print(f\"[KEEP-ALIVE] ✓ Global keep-alive thread started (120s interval)\")\n",
+    "        print(f\"[KEEP-ALIVE] ✓ Global keep-alive thread started ({SPARK_KEEPALIVE_INTERVAL}s interval)\")\n",
     "        print(\"=\"*80, \"\\n\")\n",
     "        \n",
     "    except Exception as e:\n",
