--- a/config.ipynb
+++ b/config.ipynb
@@ -216,7 +216,7 @@
     "UC_MAX_WORKERS = 20\n",
     "\n",
     "# ---- Spark keep-alive configuration ----\n",
-    "SPARK_KEEPALIVE_INTERVAL = 120        # Seconds (2 minutes for serverless compatibility)"
+    "SPARK_KEEPALIVE_INTERVAL = 120        # Seconds (2 minutes for serverless compatibility) - DONT MODIFY"
    ]
   },
   {
