--- a/config.ipynb
+++ b/config.ipynb
@@ -64,11 +64,11 @@
     "# TARGET CONFIGURATION\n",
     "# ====================================================================================\n",
     "# ---- Where to write results ----\n",
-    "TARGET_CATALOG = \"main\"              # <- set your catalog\n",
-    "TARGET_SCHEMA  = \"robert_altmiller4\" # <- set your schema (created if missing)\n",
+    "TARGET_CATALOG = \"my_catalog\"              # <- set your catalog\n",
+    "TARGET_SCHEMA  = \"my_schema\" # <- set your schema (created if missing)\n",
     "WRITE_RAW_MODE = \"overwrite\"         # \"append\" or \"overwrite\"\n",
     "WRITE_SUMMARY_MODE = \"overwrite\"     # \"append\" or \"overwrite\"\n",
-    "DELETE_EXISTING_DATA = False         # Delete all existing workspace assessment data"
+    "DELETE_EXISTING_DATA = True          # Delete all existing workspace assessment data"
    ]
   },
   {
